Commitando login pronto

--- a/src/pages/login/register/register.html
+++ b/src/pages/login/register/register.html
@@ -19,16 +19,16 @@
           <!--Form Title-->
           <h1 title text-right>Crie uma conta</h1>
           <!---Input field email-->
-          <ion-item no-padding color="light">
+          <ion-item no-padding>
             <ion-label floating>Email</ion-label>
             <ion-input required type="email" formControlName="email"></ion-input>
           </ion-item>
-          <ion-item no-padding color="light">
+          <ion-item no-padding >
             <ion-label floating>Nome</ion-label>
             <ion-input required type="text"  required formControlName="name"></ion-input>
           </ion-item>
           <!---Input field password-->
-          <ion-item no-padding color="light">
+          <ion-item no-padding >
             <ion-label floating>Senha</ion-label>
             <ion-input required type="password" formControlName="password"></ion-input>
           </ion-item>
