--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,14 +14,15 @@
       </ion-col>
     </ion-row>
     <ion-row padding>
+
       <ion-col col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6>
         <!---Input field username-->
-        <ion-item no-padding color="light">
-          <ion-label color="secondary" floating>Usuário</ion-label>
-          <ion-input required type="text" [(ngModel)]="username"></ion-input>
+        <ion-item no-padding>
+          <ion-label color="secondary" floating>Email</ion-label>
+          <ion-input required type="text" [(ngModel)]="email"></ion-input>
         </ion-item>
         <!---Input field password-->
-        <ion-item no-padding color="light">
+        <ion-item no-padding>
           <ion-label color="secondary" floating>Senha</ion-label>
           <ion-input required type="password" [(ngModel)]="password"></ion-input>
         </ion-item>
@@ -31,23 +32,13 @@
         <button ion-button button-clear clear float-right (click)="onRegister()">Crie uma conta</button>
       </ion-col>
       <!---Share Section-->
-      <ion-col col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6 social>
-        <!---Facebook button-->
-        <button ion-button color="facebook" (click)="onEvent('onFacebook')">Facebook</button>
-        <!---Twitter button-->
-        <button ion-button color="twitter" (click)="onEvent('onTwitter')">Twitter</button>
-        <!---Google button-->
-        <button ion-button color="google" (click)="onEvent('onGoogle')">Google</button>
-        <!---Pinterest button-->
-        <button ion-button color="pinterest" (click)="onEvent('onPinterest')">Pinterest</button>
-      </ion-col>
       <!---End Share Section-->
       <ion-col col-12 col-sm-12 col-md-12 offset-lg-3 col-lg-6 offset-xl-3 col-xl-6>
         <!--LOGO-->
-
         <!---Skip button-->
         <button float-right ion-button button-clear clear (click)="onEvent('onSkip')">Acessar sem conta</button>
       </ion-col>
     </ion-row>
+
   </ion-grid>
 </ion-content>
